# mytruyen-be

./: .dockerignore  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 0c4042c59c3f_add_cascade_delete_for_genre_and_tag.py  1429fa71e2d5_add_genre_table.py  1871ec41ed8e_update_book_genre_and_comment.py  37edd76b4010_add_new_chapter_at.py  53a47be9153d_add_type_for_tag.py  57f1f16d6951_update_field_name_new_chap_at.py  897809416033_inital_db.py  adb8ed83c5ad_add_timezone.py  bfc3254d1030_init.py  c305d8b7bafc_add_creator_into_chapter.py  c31e7058d0fc_update_add_enum_and_alotof_att.py  cd697bf74e4c_add_default_for_new_chap_at.py  db79482237c2_add_casecading_delete_to_schema.py  e12f17175524_remove_genre_id_from_book.py  e4f5c0516b97_add_table_book_genre.py  e5e1aa9e5f4d_update_jsomb_for_book_s_poster.py  fd4d73290010_create_table.py  feaf5a6953b5_add_table_author.py
app/: embedding_data.py  main.py  models.py
app/api/: deps.py  main.py  mainv2.py
app/api/v1/: arq.py  auth.py  (+7 more)
app/core/: config.py  db.py  middleware.py  security.py
app/crud/: author.py  book.py  chapter.py  genre.py  user.py
app/schema/: auth.py  author.py  book.py  chapter.py  genre.py  response.py  search.py  tag.py  user.py
app/service/: book.py  chapter.py  search.py
app/utilities/: audio_transcription.py  youtube_downloader.py
tests/: conftest.py
tests/api/: test_auth.py  test_book.py  test_chapter.py  test_crud.py  test_genre.py  test_models.py  test_security.py  test_tag.py
(+7 files in other folders)
